<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="32dp">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:src="@drawable/full_profile_icon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/last_name"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/department"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="14sp" />

</LinearLayout>