<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/background_list_teacher_item_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red">

        <ImageView
            android:id="@+id/delete_image_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/delete_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/delete_image_view"
            android:text="@string/delete"
            android:textColor="#FFF"
            android:textSize="13sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/list_teacher_item_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/teacher_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/muli_semibold"
            android:maxLines="1"
            android:text="@string/full_name"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/teacher_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/muli_semibold"
            android:maxLines="1"
            android:text="@string/email"
            android:textColor="@color/gray" />

        <View
            android:id="@+id/separator_view"
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/gray" />

    </LinearLayout>


</FrameLayout>